decafexpr/output/dev/llvm/expr-testfile-2.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/dev/llvm/expr-testfile-2.llvm:9:1: error: expected instruction opcode
}
^
